styles/Navigation.module.css
.navigation{
    display: flex;
    flex-direction: column;
    list-style: none;
    box-shadow: 0px 0px 5px 0px #cccccc;
    width: 80px;
    border-radius: 10px;
    margin: 10px 0px 10px 10px;
}

@media only screen and (max-width: 1024px) {
    .navigation{
        width: auto;
        flex-direction: row;
        position: fixed;
        left: 10px;
        right: 10px;
        bottom: 10px;
        margin: 0px;
        justify-content: space-around;
    }
}

.navigation__item{
    display: flex;
    position: relative;
}

.navigation__item:first-of-type::after{
    content: '';
    width: 50px;
    height: 1px;
    background: #e0e0e0;
    bottom: 0px;
    left: 0px;
    right: 0px;
    margin: auto;
    position: absolute;
}

@media only screen and (max-width: 1024px) {
    .navigation__itemLogo{
        display: none;
    }
}

.navigation__link{
    padding: 20px;
    flex: 1;
    display: flex;
}

@media only screen and (max-width: 1024px) {
    .navigation__link{
        padding: 20px;
    }
}

@media only screen and (max-width: 1024px) {
    .navigation__tooltip{
        display: none;
    }
}

.navigation__icon{
    height: 25px;
    margin: auto;
}

.navigation__link:hover .navigation__path, .navigation__linkActive .navigation__path{
    stroke: #ff4663;
    fill: #ff4663;
}

.navigation__link:hover .navigation__circlePath, .navigation__linkActive .navigation__circlePath{
    stroke: #ff4663;
    fill: #ffffff;
}

.navigation__link:hover .navigation__pinPath, .navigation__linkActive .navigation__pinPath{
    stroke: #ffffff;
    fill: #ff4663;
}

